--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-2059733737\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-969232968\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.mathematica.ds.tree.BinaryTreeNodeTest" hash-for-method="TestPostOrderTravesalIterative">TestPostOrderTravesalIterative</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.mathematica.heap.HeapTest" hash-for-method="delete">delete</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.mathematica.ds.tree.BinaryTreeNodeTest</span>
+              <span class="class-name">com.mathematica.heap.HeapTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TestPostOrderTravesalIterative">
-                  </a> <!-- TestPostOrderTravesalIterative -->
-                  <span class="method-name">TestPostOrderTravesalIterative</span>
+                  <a name="delete">
+                  </a> <!-- delete -->
+                  <span class="method-name">delete</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-2059733737\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-969232968\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,11 +144,11 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.mathematica.ds.tree.BinaryTreeNodeTest&quot;&gt;
+      &lt;class name=&quot;com.mathematica.heap.HeapTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TestPostOrderTravesalIterative&quot;/&gt;
+          &lt;include name=&quot;delete&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.mathematica.ds.tree.BinaryTreeNodeTest --&gt;
+      &lt;/class&gt; &lt;!-- com.mathematica.heap.HeapTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TestPostOrderTravesalIterative')
-data.setCell(0, 2, 'com.mathematica.ds.tree.BinaryTreeNodeTest')
-data.setCell(0, 3, 428449);
+data.setCell(0, 1, 'delete')
+data.setCell(0, 2, 'com.mathematica.heap.HeapTest')
+data.setCell(0, 3, 22);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 minutes</span>
+              <span class="suite-total-time">Total running time: 22 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -212,23 +212,13 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">6 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.mathematica.ds.tree.BinaryTreeNodeTest</span>
+              <span class="ignored-class-name">com.mathematica.heap.HeapTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">TestPreOrderTraversalIterative</span>
-                <br/>
-                <span class="ignored-method-name">createBinaryTreeNode</span>
-                <br/>
-                <span class="ignored-method-name">TestInOrderTraversal</span>
-                <br/>
-                <span class="ignored-method-name">TestPreOrderTraversal</span>
-                <br/>
-                <span class="ignored-method-name">TestInOrderTraversalIterative</span>
-                <br/>
-                <span class="ignored-method-name">TestPostOrderTraversal</span>
+                <span class="ignored-method-name">testAddElement</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -240,9 +230,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.mathematica.ds.tree.BinaryTreeNodeTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.mathematica.heap.HeapTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">TestPostOrderTravesalIterative</span>
+                <span class="method-name">delete</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
