--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ac80a1">  <td>16/11/01 19:54:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BinaryTreeNodeTest.TestPostOrderTravesalIterative()[pri:0, instance:com.mathematica.ds.tree.BinaryTreeNodeTest@1ffe63b9]">TestPostOrderTravesalIterative</td> 
-  <td>main@875016237</td>   <td></td> </tr>
+<tr bgcolor="bd618c">  <td>18/03/24 17:08:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HeapTest.delete()[pri:0, instance:com.mathematica.heap.HeapTest@6276ae34]">delete</td> 
+  <td>main@1722023916</td>   <td></td> </tr>
 </table>
